--- a/fiddle/public/views/index.html
+++ b/fiddle/public/views/index.html
@@ -11,19 +11,6 @@
       <li class="active"><a href="/fiddle">fiddle</a></li>
    </ol>
    <div id="sidebar">
-      <h3>Actions</h3>
-      <button class="btn btn-success btn-lg btn-block" ng-disabled="!user.loggedin" ng-click="create()" >Create</button>
-      <button class="btn btn-primary btn-lg btn-block" ng-disabled="!user.loggedin" data-ng-href="fiddle/list/all">see all fiddles <span class="badge"> {{fiddles.length}}</span></button>
-      <h3>Theme</h3>
-      <select ng-model="theme" ng-change="changedTheme(theme)">
-         <option value="merbivore">merbivore</option>
-         <option value="chrome">chrome</option>
-         <option value="monokai">monokai</option>
-      </select>
-      <h3>Files</h3>
-      <tabset vertical="true" type="pills">
-         <tab ng-repeat="tab in tabs" heading="{{tab.title}}"  active="tab.active"></tab>
-      </tabset>      
       <h3>Info</h3>
       <span class="">Title</span>
       <div class="input-group center-block">
@@ -34,15 +21,30 @@
         
         <textarea  ng-model="fiddle.content" type="text" class="form-control" placeholder="Content" ></textarea>
       </div>
-      created: {{fiddle.created  | date:'medium'}}<br>
+      <h3>Actions</h3>
+      <a ng-show="!user.loggedin" class="btn btn-success btn-lg btn-block" href='auth/login' >Login</a>
+      <a class="btn btn-success btn-lg btn-block" ng-disabled="!user.loggedin" ng-click="create()" >Create</a>
+      <a class="btn btn-primary btn-lg btn-block" ng-disabled="!user.loggedin" href="fiddle/list/all">See all fiddles <span class="badge"> {{fiddles.length}}</span></a>
+      <h3>Theme</h3>
+      <select class="form-control" ng-model="theme" ng-change="changedTheme(theme)">
+         <option value="merbivore">merbivore</option>
+         <option value="chrome">chrome</option>
+         <option value="monokai">monokai</option>
+      </select>
+      <h3>Files</h3>
+      <tabset vertical="true" type="pills">
+         <tab ng-repeat="tab in tabs" heading="{{tab.title}}"  active="tab.active"></tab>
+      </tabset>      
+      
       
       <h3>Recent Fiddles</h3>
       <ul class="unstyled" ng-show="user.loggedin">
-         <li data-ng-repeat="fid in fiddles| limitTo:5">
-            <span>on: {{fid.created | date:'medium'}}</span> / by:<span>{{fid.user.name}}</span>
+         <li style="list-style:none;" data-ng-repeat="fid in fiddles| limitTo:5">
             <h4>
                <a data-ng-href="fiddle/{{fid._id}}">{{fid.title}}</a>
             </h4>
+            <span>on: {{fid.created | date:'medium'}}</span> / by:<span>{{fid.user.name}}</span>
+            
             <div>content:{{fid.content}}</div>
          </li>
       </ul>
@@ -53,22 +55,22 @@
       <div id="top-content">
          <tabset>
             <tab  heading="{{tabs[0].title}}" active="tabs[0].active">
-               <h1 style="    color: black;    position: absolute;    z-index: 9;    border: 2px solid black;    right: 6%;      padding: 0;    margin-top: -42px;"> {{tabs[0].title}}</h1>
+               <h1 style=" background-color:white;text-transform: uppercase;   color: black;    position: absolute;    z-index: 9;    border: 2px solid black;    right: 6%;      padding: 0;    margin-top: -42px;"> {{tabs[0].title}}</h1>
                <div ng-model='fiddle.js' ui-ace="aceOptionsJS">{{ fiddle.js }}</div>
             </tab>
             <tab  heading="{{tabs[1].title}}"  active="tabs[1].active">
-               <h1 style="    color: black;    position: absolute;    z-index: 9;    border: 2px solid black;    right: 6%;      padding: 0;    margin-top: -42px;"> {{tabs[1].title}}</h1>
+               <h1 style=" background-color:white;text-transform: uppercase;   color: black;    position: absolute;    z-index: 9;    border: 2px solid black;    right: 6%;      padding: 0;    margin-top: -42px;"> {{tabs[1].title}}</h1>
                <div ng-model='fiddle.css' ui-ace="aceOptionsCSS">{{ fiddle.css }}</div>
             </tab>
             <tab  heading="{{tabs[2].title}}"  active="tabs[2].active">
-               <h1 style="    color: black;    position: absolute;    z-index: 9;    border: 2px solid black;    right: 6%;      padding: 0;    margin-top: -42px;"> {{tabs[2].title}}</h1>
+               <h1 style=" background-color:white;text-transform: uppercase;   color: black;    position: absolute;    z-index: 9;    border: 2px solid black;    right: 6%;      padding: 0;    margin-top: -42px;"> {{tabs[2].title}}</h1>
                <div ng-model='fiddle.html' ui-ace="aceOptionsHTML">{{ fiddle.html }}</div>
             </tab>
          </tabset>
       </div>
       <div id="bottom-content">
-         <h1 style="    color: black;    position: absolute;border: 2px solid black;    width: 150px;     padding: 0;    margin: 0;    right: 6%;"> RESULT</h1>
-         <div style="height: 90%;    position: fixed;    width: 100%" >
+         <h1 style="background-color:white;    color: black;    position: absolute;border: 2px solid black;    width: 150px;     padding: 0;    margin: 0;    right: 6%;"> RESULT</h1>
+         <div style="height: 90%;   width: 100%" >
             <div ng-click="run()" class= 'btn btn-default'>Run Code</div>
             <iframe id="iframe" style="background-color: white;"  height="100%" width="100%">You need a Frames Capable browser to view this content.</iframe>
          </div>
@@ -77,7 +79,9 @@
          resizer="horizontal" 
          resizer-height="6" 
          resizer-top="#top-content" 
-         resizer-bottom="#bottom-content">
+         resizer-bottom="#bottom-content"
+         resizer-max="500"
+          resizer-min="150">
       </div>
    </div>
    <div id="sidebar-resizer" 
@@ -85,6 +89,7 @@
       resizer-width="6" 
       resizer-left="#sidebar" 
       resizer-right="#content"
-      resizer-max="400">
+      resizer-max="400"
+      resizer-min="150">
    </div>
 </div>
