--- a/fiddle/public/views/list.html
+++ b/fiddle/public/views/list.html
@@ -1,17 +1,18 @@
 <section data-ng-controller="FiddleController" data-ng-init="find()">
    <ol class="breadcrumb">
       <li><a href="/">Home</a></li>
-      <li><a href="/fiddlee">fiddle</a></li>
+      <li><a href="/fiddle">fiddle</a></li>
       <li class="active"><a href="/fiddle/list/all">List</a></li>
    </ol>
-   <label>Search: <input ng-model="searchText"></label>
+   <label style="margin-top: 25px;">Search: <input ng-model="searchText"></label>
    <h1 ng-show="fiddles.length ==0">No fiddles Found. <a href="/fiddle/fiddle" >Create a fiddle</a></h1>
    <ul class="unstyled">
-      <li data-ng-repeat="fid in fiddles| filter:searchText">
-         <span>on: {{fid.created | date:'medium'}}</span> / by:<span>{{fid.user.name}}</span>
+      <li style="list-style:none;" data-ng-repeat="fid in fiddles| filter:searchText">
          <h4>
             <a data-ng-href="/fiddle/{{fid._id}}">{{fid.title}}</a>
          </h4>
+         <span>on: {{fid.created | date:'medium'}}</span> / by:<span>{{fid.user.name}}</span>
+         
          <div>content:{{fid.content}}</div>
       </li>
    </ul>
