--- a/fiddle/public/views/view.html
+++ b/fiddle/public/views/view.html
@@ -13,26 +13,27 @@
       <li class="active"><a href="/fiddle/{{fiddleId}}">{{fiddleId}}</a></li>
    </ol>
    <div id="sidebar">
+      <h3>Info</h3>
+      Title<br><input style="width:100%;" type="text" ng-model="fiddleShow.title"><br>
+      Content
+      <textarea style="width:100%;"ng-model="fiddleShow.content" ></textarea>
       <h3>Actions</h3>
-      <button ng-disabled="!user.loggedin" class="btn btn-primary btn-lg btn-block" ng-click="update()" >Update</button>
-      <button ng-disabled="!user.loggedin" class="btn btn-primary btn-lg btn-block" ng-click="remove(fiddleShow)" >Remove</button>
+      <button ng-show="!user.loggedin" class="btn btn-success btn-lg btn-block" href='auth/login' >Login</button>
+      <button ng-disabled="!user.loggedin" class="btn btn-success btn-lg btn-block" ng-click="update()" >Update</button>
+      <button ng-disabled="!user.loggedin" class="btn btn-primary btn-lg btn-block" ng-click="fork()" >Fork</button>
+      <button ng-disabled="!user.loggedin" class="btn btn-danger btn-lg btn-block" ng-click="remove(fiddleShow)" >Remove</button>
       <h3>Files</h3>
       <tabset vertical="true" type="pills">
          <tab ng-repeat="tab in tabs" heading="{{tab.title}}"  active="tab.active"></tab>
       </tabset>
       <h3>Theme</h3>
-      <select ng-model="theme" ng-change="changedTheme(theme)">
+      <select class="form-control" ng-model="theme" ng-change="changedTheme(theme)">
          <option value="merbivore">merbivore</option>
          <option value="chrome">chrome</option>
          <option value="monokai">monokai</option>
       </select>
       <br>
-      <h3>Info</h3>
-      Title<br><input type="text" ng-model="fiddleShow.title"><br>
-      Content
-      <textarea style="width:100%;"ng-model="fiddleShow.content" ></textarea>
-      <br>
-      created: {{fiddleShow.created  | date:'medium'}}<br>
+      
       <!--  keywords: {{fiddleShow.keywords}}<br>
          frameworks {{fiddleShow.frameworks}}<br> 
          usereditrights {{fiddleShow.usereditrights}}<br>-->
@@ -56,7 +57,7 @@
       </div>
       <div id="bottom-content">
          <h1 style="    color: black;    position: absolute;border: 2px solid black;    width: 150px;     padding: 0;    margin: 0;    right: 6%;"> RESULT</h1>
-         <div style="height: 90%;    position: fixed;    width: 100%" >
+         <div style="height: 90%; width: 100%" >
             <div ng-click="runshow()" class= 'btn btn-default'>Run Code</div>
             <iframe id="iframe" style="background-color: white;"  height="100%" width="100%">You need a Frames Capable browser to view this content.</iframe>
          </div>
@@ -65,7 +66,9 @@
          resizer="horizontal" 
          resizer-height="6" 
          resizer-top="#top-content" 
-         resizer-bottom="#bottom-content">
+         resizer-bottom="#bottom-content"
+         resizer-max="500"
+          resizer-min="150">
       </div>
    </div>
    <div id="sidebar-resizer" 
@@ -73,6 +76,7 @@
       resizer-width="6" 
       resizer-left="#sidebar" 
       resizer-right="#content"
-      resizer-max="400">
+      resizer-max="400"
+          resizer-min="150">
    </div>
 </section>
